--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="background">background</string>
     <string name="no_internet">No Internet Connection</string>
     <string name="something_went_wrong">Something went wrong</string>
+    <string name="poster">poster</string>
 </resources>
